[tool.poetry]
name = "momentum-football-bets"
version = "0.1.0"
description = ""
authors = ["Didier Lopes <didier@nurvv.com>"]

[tool.poetry.dependencies]
python = "^3.6"
bs4 = "^0.0.1"
prettytable = "^2.1.0"
colorama = "^0.4.4"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
